# webvulkan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build-wasm.sh
.cache/clangd/index/: barrier.c.5F4DDDE663ABA6C8.idx  buffer.c.6DFE9E8F785DBDFD.idx  command_buffer.c.31C7D0D751DBF8FF.idx  command_pool.c.3100F0BB81CC551F.idx  compute.c.330C5380D4F5C8E4.idx  copy.c.2C37BD0EB3645FF2.idx  descriptor_set.c.7BB38A58AE1B0367.idx  descriptor_set_layout.c.2DAB69BDF4137165.idx  device.c.599DB63F8745CE17.idx  device_memory.c.0AC9CA35E841504C.idx  draw.c.CFFFF5968116E5AE.idx  event.c.562CA783D499013E.idx  fence.c.7ABAD4A324953604.idx  framebuffer.c.68BE2C7E8C6B1F25.idx  hash_table.c.E5BFFB78D06B70BC.idx  image.c.CDF899C37006A824.idx  image_view.c.1EDCAC27EF472A7F.idx  instance.c.AB40D741BD769788.idx  list.c.20069F1F42F84D4B.idx  log.c.93B1E6D230A28719.idx  log.h.199ECEDA2ED97372.idx  physical_device.c.538AC8674F6DC547.idx  pipeline.c.5C118036F1015662.idx  pipeline_layout.c.36FE300E27D18CDC.idx  push_constants.c.EC7A5655B066C8C7.idx  push_constants.h.E7C99D7DF96D42DD.idx  queue.c.675152FA20DFD137.idx  render_pass.c.A5EABB30694ED360.idx  render_pass.c.C7DEEAF5B24F857B.idx  sampler.c.5436D1DB59F53B9D.idx  semaphore.c.8F79B436BA5CCE37.idx  shader_module.c.B3B8990252CDF109.idx  spirv_parser.c.3432558052F08D05.idx  spirv_parser.h.3B695C9DEEDA399A.idx  subpass.c.89337CF4B8A44816.idx  subpass.h.FD9F2AD188A7C2C2.idx  sync.c.60226EA3280FC744.idx  test_buffer.c.55BBCAE195DD6B94.idx  test_device.c.F7A9374B4605086B.idx  test_image.c.5FA88D968F43F8B4.idx  (+10 more)
.github/workflows/: ci.yml
build-sanitize/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-sanitize/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_buffer  test_device  test_image  test_instance  test_pipeline  test_spirv
build-sanitize/tests/Testing/Temporary/: CTestCostData.txt
cmake/: Emscripten.cmake  webvulkanConfig.cmake.in
docs/: API_COVERAGE.md  ARCHITECTURE.md
include/: vulkan.h  webvulkan.h
include/webgpu/: webgpu.h
samples/: CMakeLists.txt  index.html  shell.html
samples/computeshader/: CMakeLists.txt  computeshader.html  main.c
samples/deferred/: CMakeLists.txt  deferred.html  main.c
samples/descriptorsets/: descriptorsets.html
samples/instancing/: instancing.html
samples/pipelines/: CMakeLists.txt  main.c  pipelines.html
samples/pushconstants/: CMakeLists.txt  main.c  pushconstants.html
samples/shadowmapping/: CMakeLists.txt  main.c  shadowmapping.html
samples/texture/: texture.html
samples/triangle/: CMakeLists.txt  index.html  main.c  shell.html  triangle.c  triangle.html
samples/vertexattributes/: vertexattributes.html
src/: vulkan_platform.h  webvulkan.c  webvulkan.h  webvulkan_internal.h  wgvk_accessors.h
src/commands/: compute.c  copy.c  draw.c  render_pass.c  subpass.c  subpass.h  sync.c
src/core/: device.c  instance.c  physical_device.c  queue.c
src/memory/: allocator.c  device_memory.c
src/objects/: buffer.c  command_buffer.c  command_pool.c  descriptor_set.c  descriptor_set_layout.c  event.c  fence.c  framebuffer.c  image.c  image_view.c  pipeline.c  pipeline_layout.c  render_pass.c  sampler.c  semaphore.c  shader_module.c
src/shaders/: naga.c  spirv.c  spirv_parser.c  spirv_parser.h  wgsl.c  wgsl_gen.c  wgsl_gen.h
src/stubs/: webgpu_stubs.c
src/sync/: barrier.c  push_constants.c  push_constants.h
src/util/: hash_table.c  list.c  log.c  log.h
tests/: CMakeLists.txt  test_buffer.c  test_device.c  test_image.c  test_instance.c  test_lifecycle.c  test_pipeline.c  test_spirv.c  webgpu_stubs.c
