cmake_minimum_required(VERSION 3.20)

add_subdirectory(triangle)
add_subdirectory(pipelines)
add_subdirectory(pushconstants)
add_subdirectory(descriptorsets)
add_subdirectory(instancing)
add_subdirectory(texture)
add_subdirectory(computeshader)
add_subdirectory(deferred)
add_subdirectory(shadowmapping)
